Fix a text alignment issue in the ranking
The issue would affect Chrome and Safari.

--- a/components/explore/tabs/areas-interest/ranking/style.scss
+++ b/components/explore/tabs/areas-interest/ranking/style.scss
@@ -47,10 +47,6 @@
       }
 
       > div:last-of-type {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        text-align: right;
         font-family: $font-family-2;
         @include font-size($font-size-xxs);
       }
